--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/web3.js": "^1.95.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
+    "axios": "^1.6.0",
     "express": "^4.19.2",
     "node-telegram-bot-api": "^0.66.0"
   },
